informacion agregada a base de datos, seccion productos incertando subrutas con React-Router-Dom

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "set PORT=4000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch src/Components/asset/DataBase.json --port 3000"
   },
   "eslintConfig": {
     "extends": [
